# hyperliquid-trader-tracker

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.tracker  Dockerfile.tracker-rs
docs/: DESIGN.md  hyperliquid-api-map.md
src/: main.rs  telegram_setup_main.rs
src/tracker/: __init__.py  app.py  app.rs  book.py  book.rs  bot.py  bot.rs  config.py  config.rs  db.py  db.rs  enrich.py  enrich.rs  exceptions.py  exceptions.rs  hl_client.py  hl_client.rs  listener.py  listener.rs  mod.rs  models.py  models.rs  notifier.py  notifier.rs  pnl.py  pnl.rs  registry.py  registry.rs  resolve.py  resolve.rs  retry.py  retry.rs  state.py  state.rs  telegram_setup.py  telegram_setup.rs  watchlist.py  watchlist.rs
tests/: test_book.py  test_config.py  test_db.py  test_enrich.py  test_notifier.py  test_pnl.py  test_registry.py  test_resolve.py  test_state.py  test_watchlist.py
